manifest/objects/Flow__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Flow settings</description>
    <fields>
        <fullName>API_Token__c</fullName>
        <description>Required to request against v5 of TAS</description>
        <label>API Token</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAS_Domain__c</fullName>
        <label>TAS Domain</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAS_Endpoint__c</fullName>
        <label>TAS Endpoint</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAS_Password__c</fullName>
        <label>TAS Password</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAS_Username__c</fullName>
        <label>TAS Username</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FLOW</label>
</CustomObject>